# AutoMend-Product

./: .dockerignore  .gitignore  ARCHITECTURE.txt  CLAUDE.md  DECISIONS.md  DEPLOY_GCP.md  DEPLOY_GCP_QUICK.md  MANUAL_TESTING.md  PROGRESS.md  README.md  backend_architecture.md  build_plan.md  crashing-ml.yaml  crashing-payments.yaml  crashing-search.yaml  fluentbit.yaml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
.github/workflows/: build-and-deploy.yaml
backend/: .env.example  alembic.ini  main_api.py  main_correlation_worker.py  main_temporal_worker.py  main_window_worker.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_projects.py  003_projects_namespace_kill_switch.py  004_cascade_playbook_version_fks.py  005_model_feedback.py
backend/app/: config.py  dependencies.py
backend/app/api/: routes_auth.py  routes_clusters.py  routes_design.py  routes_incidents.py  routes_playbooks.py  routes_projects.py  routes_rules.py  routes_tools.py  routes_webhooks.py  routes_workflows.py
backend/app/domain/: events.py  feedback.py  incidents.py  keys.py  playbooks.py  projects.py  rules.py  tools.py
backend/app/models/: db.py
backend/app/services/: architect_client.py  broadcast.py  classifier_client.py  classifier_server.py  classifier_taxonomy.py  embedding_service.py  k8s_client.py  log_patterns.py  vector_search_service.py
backend/app/stores/: postgres_store.py  redis_store.py
backend/app/temporal/: activities.py  workflows.py
backend/app/workers/: correlation_worker.py  window_worker.py
backend/scripts/: bootstrap_admin.py  seed_data.py  seed_rules.py  seed_tools.py
backend/tests/: conftest.py  test_dependencies.py  test_e2e_full_pipeline.py  test_e2e_inference_integration.py  test_e2e_logs_to_incident.py  test_models.py  test_seed.py  test_skeleton.py
backend/tests/test_api/: test_routes_auth.py  test_routes_clusters.py  test_routes_design.py  test_routes_incidents.py  test_routes_playbooks.py  test_routes_projects.py  test_routes_rules.py  test_routes_tools.py  test_routes_webhooks.py  test_routes_workflows.py
backend/tests/test_domain/: test_domain_models.py
backend/tests/test_services/: test_architect.py  test_broadcast.py  test_classifier.py  test_embedding.py  test_vector_search.py
backend/tests/test_stores/: test_postgres_store.py  test_redis_store.py
backend/tests/test_temporal/: test_activities.py  test_correlation_temporal.py  test_workflows.py
backend/tests/test_workers/: test_correlation_worker.py  test_window_worker.py
inference_backend/: README.md
inference_backend/ClassifierModel/: Dockerfile
inference_backend/GeneratorModel/: .env.example  README.md  docker-compose.yml  startup.sh
infra/: docker-compose.infra.yml  docker-compose.yml
scripts/: seed_default_models.py
(+116 files in other folders)
